# choi-chatbot

./: README.md  main.ipynb  pyproject.toml  requirements.txt  test_tool.ipynb
backend/: choi_chatbot.py
frontend/: front_end.py
utils/llms/models/: __init__.py  embedder.py  llm_model.py
utils/llms/rags/: chatbot.py
utils/llms/store/: __init__.py  vector_store.py
utils/llms/tools/: __init__.py  choi_tools.py  file_reader.py  retriever.py
